Resolves: tdf#125580 Limit operator +|- date+time resolution to microseconds

This is a combination of 2 commits.

Resolves: tdf#125580 Limit operator +|- date+time resolution to microseconds

With tools::Duration that is now finally easily possible.

xChange-Id: Ib22e6f94d321be78578997bef5094284f2bd549b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159378
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>

Related: tdf#125580 Use tools::Duration constexpr accuracy epsilon values

xChange-Id: I8f83c23206686ce23fb3f8be7d7098bbe252dc41
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159388
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins

Change-Id: Ib22e6f94d321be78578997bef5094284f2bd549b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159393
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins